# discord_telegram_mirror_bot

./: .gitignore  .gitmodules  Cargo.toml  README.md
discord-md/src/parser/: mod.rs
src/: db.rs  format.rs  main.rs  manager.rs  model.rs  old.rs
