[package]
name = "telediscord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version =  "*", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "sqlite", "macros", "chrono" ] }
teloxide = { version = "0.13.0", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5.0"
dotenv = "0.15.0"
lazy_static = "1.4.0"
once_cell = "1.18.0"
eyre = "0.6.12"
discord-md = "3.0.0"
url = "2.5.2"
futures = "0.3.30"
dashmap = "6.0.1"
toml = "0.8.15"
base64 = "0.22.1"



[dependencies.serenity]
default-features = false
features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend"]
version = "0.12.2"
